--- a/Standard Library Types/Arc 1/task-info.yaml
+++ b/Standard Library Types/Arc 1/task-info.yaml
@@ -1,10 +1,10 @@
 type: edu
 files:
+- name: Cargo.toml
+  visible: false
 - name: src/main.rs
   visible: true
   placeholders:
-  - offset: 124
-    length: 9
-    placeholder_text: type here
-- name: Cargo.toml
-  visible: true
+    - offset: 124
+      length: 9
+      placeholder_text: type here
