--- a/Test 4/Test 4/task-info.yaml
+++ b/Test 4/Test 4/task-info.yaml
@@ -1,10 +1,10 @@
 type: edu
 files:
+- name: Cargo.toml
+  visible: false
 - name: src/lib.rs
   visible: true
 - name: src/main.rs
   visible: true
 - name: tests/tests.rs
   visible: false
-- name: Cargo.toml
-  visible: true
