--- a/Functions/Functions 1/task-info.yaml
+++ b/Functions/Functions 1/task-info.yaml
@@ -4,3 +4,7 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 30
+    length: 12
+    placeholder_text: TODO
