--- a/Functions/Functions 2/task-info.yaml
+++ b/Functions/Functions 2/task-info.yaml
@@ -4,3 +4,7 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 46
+    length: 4
+    placeholder_text: TODO
