--- a/Test 1/Test 1/task-info.yaml
+++ b/Test 1/Test 1/task-info.yaml
@@ -2,7 +2,7 @@ type: edu
 files:
 - name: Cargo.toml
   visible: false
-- name: src/lib.rs
-  visible: true
 - name: tests/tests.rs
   visible: false
+- name: src/main.rs
+  visible: true
