--- a/Variables/Variables 1/task-info.yaml
+++ b/Variables/Variables 1/task-info.yaml
@@ -4,3 +4,7 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 16
+    length: 3
+    placeholder_text: TODO
