--- a/Variables/Variables 4/task-info.yaml
+++ b/Variables/Variables 4/task-info.yaml
@@ -4,3 +4,7 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 21
+    length: 5
+    placeholder_text: TODO
