--- a/Introduction/Getting started/Hello World/task-info.yaml
+++ b/Introduction/Getting started/Hello World/task-info.yaml
@@ -1,6 +1,12 @@
-type: theory
+type: edu
 files:
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 16
+    length: 26
+    placeholder_text: // put you code here to launch it
 - name: Cargo.toml
   visible: true
+- name: tests/tests.rs
+  visible: false
