Guessing Game - Comparing the guess to the secret number: cargo.toml modified to include escargot, test file added (does not compile for now)

--- a/Guessing Game/Programming a Guessing Game/Comparing the Guess to the Secret Number/task-info.yaml
+++ b/Guessing Game/Programming a Guessing Game/Comparing the Guess to the Secret Number/task-info.yaml
@@ -71,3 +71,5 @@ files:
     placeholder_text: //fill in the code to match the guess with the secret number
 - name: Cargo.toml
   visible: true
+- name: tests/tests.rs
+  visible: false
