--- a/Common Programming Concepts/Data Types/Primitive Types 1/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Primitive Types 1/task-info.yaml
@@ -4,3 +4,8 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 109
+    length: 19
+    placeholder_text: // Finish the rest of this line like the example! Or make it
+      be false!
