Common Programming Concepts - Data Types - Characters renamed, placeholder added, the project cargo.toml modified

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ members = [
     "Common Programming Concepts/Variables/Variables 3",
     "Common Programming Concepts/Variables/Variables 4",
     "Common Programming Concepts/Data Types/Scalar Types",
-    "Common Programming Concepts/Data Types/Primitive Types 1",
-    "Common Programming Concepts/Data Types/Primitive Types 2",
+    "Common Programming Concepts/Data Types/Boolean",
+    "Common Programming Concepts/Data Types/Characters",
     "Common Programming Concepts/Data Types/Compound Types",
     "Common Programming Concepts/Data Types/Primitive Types 3",
     "Common Programming Concepts/Data Types/Primitive Types 4",
