--- a/Common Programming Concepts/Data Types/Characters/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Characters/task-info.yaml
@@ -4,3 +4,10 @@ files:
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 281
+    length: 21
+    placeholder_text: |-
+      // Finish this line like the example! What's your favorite character?
+          // Try a letter, try a number, try a special character, try a character
+          // from a different language than your own, try an emoji!
