CPC -DT: Primitive Types 3 renamed to Arrays

--- a/Common Programming Concepts/Data Types/lesson-info.yaml
+++ b/Common Programming Concepts/Data Types/lesson-info.yaml
@@ -3,7 +3,7 @@ content:
 - Boolean
 - Characters
 - Compound Types
-- Primitive Types 3
+- Arrays
 - Primitive Types 4
 - Primitive Types 5
 - Primitive Types 6
