--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ members = [
     "Common Programming Concepts/Data Types/Boolean",
     "Common Programming Concepts/Data Types/Characters",
     "Common Programming Concepts/Data Types/Compound Types",
-    "Common Programming Concepts/Data Types/Primitive Types 3",
+    "Common Programming Concepts/Data Types/Arrays",
     "Common Programming Concepts/Data Types/Primitive Types 4",
     "Common Programming Concepts/Data Types/Primitive Types 5",
     "Common Programming Concepts/Data Types/Primitive Types 6",
