--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ members = [
     "Common Programming Concepts/Data Types/Compound Types",
     "Common Programming Concepts/Data Types/Arrays",
     "Common Programming Concepts/Data Types/Slices",
-    "Common Programming Concepts/Data Types/Primitive Types 5",
+    "Common Programming Concepts/Data Types/Tuples",
     "Common Programming Concepts/Data Types/Primitive Types 6",
     "Common Programming Concepts/Functions/Intro",
     "Common Programming Concepts/Functions/Statements and Expressions",
