--- a/Common Programming Concepts/Data Types/Tuples/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Tuples/task-info.yaml
@@ -7,4 +7,6 @@ files:
   placeholders:
   - offset: 59
     length: 11
-    placeholder_text: TODO
+    placeholder_text: /*destructure the tuple here*/
+- name: tests/tests.rs
+  visible: false
