CPC -Functions: Functions 1 renamed to Defining a Function, Statements and Expressions task description modified

--- a/Common Programming Concepts/Functions/Defining a Function/task-info.yaml
+++ b/Common Programming Concepts/Functions/Defining a Function/task-info.yaml
@@ -7,4 +7,4 @@ files:
   placeholders:
   - offset: 30
     length: 12
-    placeholder_text: TODO
+    placeholder_text: //insert the function declaration here
