--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ members = [
     "Common Programming Concepts/Data Types/Tuple Index",
     "Common Programming Concepts/Functions/Intro",
     "Common Programming Concepts/Functions/Statements and Expressions",
-    "Common Programming Concepts/Functions/Functions 1",
+    "Common Programming Concepts/Functions/Defining a Function",
     "Common Programming Concepts/Functions/Functions 2",
     "Common Programming Concepts/Functions/Functions 3",
     "Common Programming Concepts/Functions/Functions 4",
