CPC -Functions: Functions 2 renamed to Type Annotation of a Parameter

--- a/Common Programming Concepts/Functions/lesson-info.yaml
+++ b/Common Programming Concepts/Functions/lesson-info.yaml
@@ -2,7 +2,7 @@ content:
 - Intro
 - Statements and Expressions
 - Defining a Function
-- Functions 2
+- Type Annotation of a Parameter
 - Functions 3
 - Functions 4
 - Functions 5
