--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ members = [
     "Common Programming Concepts/Functions/Intro",
     "Common Programming Concepts/Functions/Statements and Expressions",
     "Common Programming Concepts/Functions/Defining a Function",
-    "Common Programming Concepts/Functions/Functions 2",
+    "Common Programming Concepts/Functions/Type Annotation of a Parameter",
     "Common Programming Concepts/Functions/Functions 3",
     "Common Programming Concepts/Functions/Functions 4",
     "Common Programming Concepts/Functions/Functions 5",
