--- a/Common Programming Concepts/Functions/Type Annotation of a Parameter/task-info.yaml
+++ b/Common Programming Concepts/Functions/Type Annotation of a Parameter/task-info.yaml
@@ -7,4 +7,4 @@ files:
   placeholders:
   - offset: 46
     length: 4
-    placeholder_text: TODO
+    placeholder_text: /*insert the type annotation here*/
