CPC -Functions: Functions 3 renamed to Passing an Argument

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ members = [
     "Common Programming Concepts/Functions/Statements and Expressions",
     "Common Programming Concepts/Functions/Defining a Function",
     "Common Programming Concepts/Functions/Type Annotation of a Parameter",
-    "Common Programming Concepts/Functions/Functions 3",
+    "Common Programming Concepts/Functions/Passing an Argument",
     "Common Programming Concepts/Functions/Functions 4",
     "Common Programming Concepts/Functions/Functions 5",
     "Common Programming Concepts/Test 1/Test 1",
