--- a/Common Programming Concepts/Functions/lesson-info.yaml
+++ b/Common Programming Concepts/Functions/lesson-info.yaml
@@ -3,6 +3,6 @@ content:
 - Statements and Expressions
 - Defining a Function
 - Type Annotation of a Parameter
-- Functions 3
+- Passing an Argument
 - Functions 4
 - Functions 5
