CPC -Functions: Functions 4 renamed to Return TYpe

--- a/Common Programming Concepts/Functions/lesson-info.yaml
+++ b/Common Programming Concepts/Functions/lesson-info.yaml
@@ -4,5 +4,5 @@ content:
 - Defining a Function
 - Type Annotation of a Parameter
 - Passing an Argument
-- Functions 4
+- Return Type
 - Functions 5
