--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ members = [
     "Common Programming Concepts/Functions/Defining a Function",
     "Common Programming Concepts/Functions/Type Annotation of a Parameter",
     "Common Programming Concepts/Functions/Passing an Argument",
-    "Common Programming Concepts/Functions/Functions 4",
+    "Common Programming Concepts/Functions/Return Type",
     "Common Programming Concepts/Functions/Functions 5",
     "Common Programming Concepts/Test 1/Test 1",
     "Common Programming Concepts/If/Intro",
