CPC -Functions: Functions 5 renamed to Return a Value

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ members = [
     "Common Programming Concepts/Functions/Type Annotation of a Parameter",
     "Common Programming Concepts/Functions/Passing an Argument",
     "Common Programming Concepts/Functions/Return Type",
-    "Common Programming Concepts/Functions/Functions 5",
+    "Common Programming Concepts/Functions/Return a Value",
     "Common Programming Concepts/Test 1/Test 1",
     "Common Programming Concepts/If/Intro",
     "Common Programming Concepts/If/else if",
