CPC - Test 1 : Test 1 Variables and Functions Test/ Calculate Price, task changed to Edu, placeholder and code added, tests implemented

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ members = [
     "Common Programming Concepts/Functions/Passing an Argument",
     "Common Programming Concepts/Functions/Return Type",
     "Common Programming Concepts/Functions/Return a Value",
-    "Common Programming Concepts/Test 1/Test 1",
+    "Common Programming Concepts/Variables and Functions Test/Calculate Price",
     "Common Programming Concepts/If/Intro",
     "Common Programming Concepts/If/else if",
     "Common Programming Concepts/If/Repetition with Loops",
