CPC - If: IF 1 renamed to If task, placeholder added, tests modified

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ members = [
     "Common Programming Concepts/If/Intro",
     "Common Programming Concepts/If/else if",
     "Common Programming Concepts/If/Repetition with Loops",
-    "Common Programming Concepts/If/If 1",
+    "Common Programming Concepts/If/If Task",
     "Writing Automated Tests/Tests/Intro",
     "Writing Automated Tests/Tests/Adding Custom Failure Messages",
     "Writing Automated Tests/Tests/Tests 1",
