Writing Automated Tests - Tests - Test 1 and Test 2: renamed to Assert and Assert_eq respectively

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,8 @@ members = [
     "Common Programming Concepts/If/If Task",
     "Writing Automated Tests/Tests/Intro",
     "Writing Automated Tests/Tests/Adding Custom Failure Messages",
-    "Writing Automated Tests/Tests/Tests 1",
-    "Writing Automated Tests/Tests/Tests 2",
+    "Writing Automated Tests/Tests/Assert",
+    "Writing Automated Tests/Tests/Assert_Eq",
     "Writing Automated Tests/Tests/Tests 3",
     "Writing Automated Tests/Test 2/Test 2",
     "Common Collections/Strings/Intro",
