Writing Automated Tests - Tests - Test 3: renamed to Testing Task

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ members = [
     "Writing Automated Tests/Tests/Adding Custom Failure Messages",
     "Writing Automated Tests/Tests/Assert",
     "Writing Automated Tests/Tests/Assert_Eq",
-    "Writing Automated Tests/Tests/Tests 3",
+    "Writing Automated Tests/Tests/Testing Task",
     "Writing Automated Tests/Test 2/Test 2",
     "Common Collections/Strings/Intro",
     "Common Collections/Strings/Strings 1",
