Modules and Macros - Modules - Modules1: task description modified, task type changed, placeholder and tests are added

--- a/Modules & Macros/Modules/Modules 1/task-info.yaml
+++ b/Modules & Macros/Modules/Modules 1/task-info.yaml
@@ -1,6 +1,12 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 26
+    length: 4
+    placeholder_text: /*insert the keyword here to make the function public*/
+- name: tests/tests.rs
+  visible: false
