--- a/Modules & Macros/Modules/lesson-info.yaml
+++ b/Modules & Macros/Modules/lesson-info.yaml
@@ -3,5 +3,5 @@ content:
 - Paths for Referring to an Item in the Module Tree
 - Bringing Paths into Scope with the use Keyword
 - Separating Modules into Different Files
-- Modules 1
+- Public Modifier
 - Modules 2
