Modules and Macros - Modules - Modules 2 renamed to Public Modifier 2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ members = [
     "Modules & Macros/Modules/Bringing Paths into Scope with the use Keyword",
     "Modules & Macros/Modules/Separating Modules into Different Files",
     "Modules & Macros/Modules/Public Modifier",
-    "Modules & Macros/Modules/Modules 2",
+    "Modules & Macros/Modules/Public Modifier 2",
     "Modules & Macros/Macros/Intro",
     "Modules & Macros/Macros/Macros 1",
     "Modules & Macros/Macros/Macros 2",
