--- a/Modules & Macros/Modules/lesson-info.yaml
+++ b/Modules & Macros/Modules/lesson-info.yaml
@@ -4,4 +4,4 @@ content:
 - Bringing Paths into Scope with the use Keyword
 - Separating Modules into Different Files
 - Public Modifier
-- Modules 2
+- Public Modifier 2
