--- a/Modules & Macros/Macros/Macros 1/task-info.yaml
+++ b/Modules & Macros/Macros/Macros 1/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 111
+    length: 1
+    placeholder_text: /*call the macro here*/
