Modules and Macros - Macros - Macros 2: renamed to Calling a Macro, placeholder added, task type changed to edu

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ members = [
     "Modules & Macros/Modules/Public Modifier",
     "Modules & Macros/Modules/Public Modifier 2",
     "Modules & Macros/Macros/Intro",
-    "Modules & Macros/Macros/Macros 1",
+    "Modules & Macros/Macros/Calling a Macro",
     "Modules & Macros/Macros/Macros 2",
     "Modules & Macros/Macros/Macros 3",
     "Modules & Macros/Macros/Macros 4",
