Modules and Macros - Macros - Macros 2: task type changed to edu, task description modified, placeholders added

--- a/Modules & Macros/Macros/Macros 2/task-info.yaml
+++ b/Modules & Macros/Macros/Macros 2/task-info.yaml
@@ -1,6 +1,16 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 207
+    length: 30
+    placeholder_text: /*the main function declaration should be below the macro declaration*/
+  - offset: 0
+    length: 118
+    placeholder_text: |-
+      fn main() {
+          my_macro!();
+      }
