--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ members = [
     "Modules & Macros/Modules/Public Modifier 2",
     "Modules & Macros/Macros/Intro",
     "Modules & Macros/Macros/Calling a Macro",
-    "Modules & Macros/Macros/Macros 2",
+    "Modules & Macros/Macros/Declaring a Macro",
     "Modules & Macros/Macros/Macros 3",
     "Modules & Macros/Macros/Macros 4",
     "Modules & Macros/Test 4/Test 4",
