--- a/Understanding Ownership/Move Semantics/lesson-info.yaml
+++ b/Understanding Ownership/Move Semantics/lesson-info.yaml
@@ -2,7 +2,7 @@ content:
 - Intro
 - References and Borrowing
 - The Slice Type
-- Move Semantics 1
+- Mutable
 - Move Semantics 2
 - Move Semantics 3
 - Move Semantics 4
