--- a/Understanding Ownership/Move Semantics/lesson-info.yaml
+++ b/Understanding Ownership/Move Semantics/lesson-info.yaml
@@ -3,6 +3,6 @@ content:
 - References and Borrowing
 - The Slice Type
 - Mutable
-- Move Semantics 2
+- Borrow
 - Move Semantics 3
 - Move Semantics 4
