Understanding Ownership - Move Semantics - Move Semantics 3: task type changed, placeholder added, tests implemented

--- a/Understanding Ownership/Move Semantics/Move Semantics 3/Cargo.toml
+++ b/Understanding Ownership/Move Semantics/Move Semantics 3/Cargo.toml
@@ -1,4 +1,7 @@
 [package]
-name = "move_semantics3"
+name = "mutable_argument"
 version = "0.1.0"
 edition = "2018"
+
+[dependencies]
+escargot = "0.5"
