--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ members = [
     "Understanding Ownership/Move Semantics/The Slice Type",
     "Understanding Ownership/Move Semantics/Mutable",
     "Understanding Ownership/Move Semantics/Borrow",
-    "Understanding Ownership/Move Semantics/Move Semantics 3",
+    "Understanding Ownership/Move Semantics/Mutable Argument",
     "Understanding Ownership/Move Semantics/Move Semantics 4",
     "Recoverable & Unrecoverable Errors/Error Handling/Intro",
     "Recoverable & Unrecoverable Errors/Error Handling/Recoverable Errors with Result",
