--- a/Recoverable & Unrecoverable Errors/Error Handling/Errors 2/task-info.yaml
+++ b/Recoverable & Unrecoverable Errors/Error Handling/Errors 2/task-info.yaml
@@ -4,5 +4,10 @@ files:
   visible: false
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 198
+    length: 1
+    placeholder_text: /*this is the short way, but you can just match the result of
+      the parse*/
 - name: tests/tests.rs
   visible: false
