Recoverable & Unrecoverable Errors - Error Handling - Errors 2: renamed to Matching Result

--- a/Recoverable & Unrecoverable Errors/Error Handling/lesson-info.yaml
+++ b/Recoverable & Unrecoverable Errors/Error Handling/lesson-info.yaml
@@ -3,7 +3,7 @@ content:
 - Recoverable Errors with Result
 - Generic Data Types
 - Returning Result
-- Errors 2
+- Matching Result
 - Errors 3
 - Errors n
 - Option 1
