--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ members = [
     "Recoverable & Unrecoverable Errors/Error Handling/Recoverable Errors with Result",
     "Recoverable & Unrecoverable Errors/Error Handling/Generic Data Types",
     "Recoverable & Unrecoverable Errors/Error Handling/Returning Result",
-    "Recoverable & Unrecoverable Errors/Error Handling/Errors 2",
+    "Recoverable & Unrecoverable Errors/Error Handling/Matching Result",
     "Recoverable & Unrecoverable Errors/Error Handling/Errors 3",
     "Recoverable & Unrecoverable Errors/Error Handling/Errors n",
     "Recoverable & Unrecoverable Errors/Error Handling/Option 1",
