Recoverable & Unrecoverable Errors - Error Handling - Error 3: renamed to MAtching Result 2, task description modified, type switched to edu, placeholder added

--- a/Recoverable & Unrecoverable Errors/Error Handling/lesson-info.yaml
+++ b/Recoverable & Unrecoverable Errors/Error Handling/lesson-info.yaml
@@ -4,7 +4,7 @@ content:
 - Generic Data Types
 - Returning Result
 - Matching Result
-- Errors 3
+- Matching Result 2
 - Errors n
 - Option 1
 - Result 1
