--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,7 +70,7 @@ members = [
     "Recoverable & Unrecoverable Errors/Error Handling/Generic Data Types",
     "Recoverable & Unrecoverable Errors/Error Handling/Returning Result",
     "Recoverable & Unrecoverable Errors/Error Handling/Matching Result",
-    "Recoverable & Unrecoverable Errors/Error Handling/Errors 3",
+    "Recoverable & Unrecoverable Errors/Error Handling/Matching Result 2",
     "Recoverable & Unrecoverable Errors/Error Handling/Errors n",
     "Recoverable & Unrecoverable Errors/Error Handling/Option 1",
     "Recoverable & Unrecoverable Errors/Error Handling/Result 1",
