--- a/Recoverable & Unrecoverable Errors/Error Handling/Option 1/task-info.yaml
+++ b/Recoverable & Unrecoverable Errors/Error Handling/Option 1/task-info.yaml
@@ -1,6 +1,12 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 170
+    length: 13
+    placeholder_text: .unwrap()/*return 3 even if the pop panicks*/
+- name: tests/tests.rs
+  visible: false
