--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ members = [
     "Recoverable & Unrecoverable Errors/Error Handling/Matching Result 2",
     "Recoverable & Unrecoverable Errors/Error Handling/Multiple Errors",
     "Recoverable & Unrecoverable Errors/Error Handling/Option",
-    "Recoverable & Unrecoverable Errors/Error Handling/Result 1",
+    "Recoverable & Unrecoverable Errors/Error Handling/Result",
     "Fearless Concurrency/Threads/Intro",
     "Fearless Concurrency/Threads/Using Message Passing to Transfer Data Between Threads",
     "Fearless Concurrency/Threads/Extensible Concurrency with the Sync and Send Traits",
