--- a/Fearless Concurrency/Threads/Threads 1/task-info.yaml
+++ b/Fearless Concurrency/Threads/Threads 1/task-info.yaml
@@ -1,6 +1,19 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 157
+    length: 43
+    placeholder_text: 'JobStatus { jobs_completed: 0 }/*try using Mutex*/'
+  - offset: 449
+    length: 16
+    placeholder_text: /*you should lock the status value here*/
+  - offset: 377
+    length: 16
+    placeholder_text: /*you probably would like to lock the value modified in another
+      thread*/
+- name: tests/tests.rs
+  visible: false
